# kadai

./: .gitignore  LICENSE_HEADER.txt  LICENSE_HEADER_HTML.txt  LICENSE_HEADER_SCSS.txt  NOTICE  README.md  pom.xml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.run/: All in kadai-common-data.run.xml  All in kadai-common-logging.run.xml  All in kadai-common-test.run.xml  All in kadai-common.run.xml  All in kadai-core DB2.run.xml  All in kadai-core H2.run.xml  All in kadai-core POSTGRES.run.xml  All in kadai-core-test DB2.run.xml  All in kadai-core-test H2.run.xml  All in kadai-core-test POSTGRES.run.xml  All in kadai-loghistory-provider.run.xml  All in kadai-rest-spring-example-common.run.xml  All in kadai-rest-spring.run.xml  All in kadai-routing-rest.run.xml  All in kadai-simplehistory-provider H2.run.xml  All in kadai-simplehistory-rest-spring.run.xml  All in kadai-spi-routing-dmn-router.run.xml  All in kadai-spring-example.run.xml  Build Backend No Checkstyle.run.xml  Build Backend.run.xml  Clean Install.run.xml  Debug Frontend.run.xml  Postgres.run.xml  Run ArchitectureTest.run.xml  Start Demo App DevMode.run.xml  Start Demo App No CSRF.run.xml  Start Demo App.run.xml  Start Frontend.run.xml  Stop all DB.run.xml  Test E2E.run.xml  Test Frontend.run.xml
ci/: change_version.sh  commitPoms.sh  mvnsettings.xml  (+3 more)
ci/release-notes/: release-drafter-experimentation.cabal
ci/release-notes/app/: Main.hs
ci/release-notes/data/: categories.md  category.md  out.md  pr-body.md  release.md  single-category.md
(+1676 files in other folders)
